# cortex-microservice-rust-demo

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  catalog-info.yaml  cortex-microservice-rust-demo-deployment.yaml  cortex.yaml  mkdocs.yml
docs/: README.md
microservice-db/: catalog-info.yaml
src/: main.rs
