[package]
name = "cortex-microservice-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "=0.5.0", default-features = false, features = [ "json" ] }
rocket_okapi = { version = "0.8.0", features = [ "swagger", "rapidoc" ] }
# rocket_okapi = "0.8.0"
serde = "1.0"

[features]
# Enable Rocket's JSON support
json = ["rocket/json"]
